Prevent overflow on X-axis

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -30,6 +30,7 @@ body {
 	font-family: "Overpass", sans-serif;
 	font-weight: 600;
 	transition: 0.5s;
+	overflow-x: hidden;
 }
 
 a {
